# BI-PA2

semwork/vernead2/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  REAMDE.md  callDiagram.drawio  new.Makefile  prohlaseni.txt  test.cpp  zadani.txt
semwork/vernead2/examples/: Readme.md  ascii  example_1_in.txt  example_1_out.txt  example_2_in.txt  example_2_out.txt  kitty.ascii  progtest.ascii
semwork/vernead2/examples/Images/: progtest.ascii
semwork/vernead2/src/: Constants.h  Exceptions.h  Filter.cpp  Image.cpp  Scaler.cpp  Sequence.cpp  ViewPort.cpp  cmd.cpp  dataTypes.h
semwork/vernead2/src/CFilter/: CFilter.cpp  CFilter_HighPass.cpp  CFilter_Inverse.cpp  CFilter_LowPass.cpp  CFilter_Rotate.cpp  CFilter_Sharpen.cpp
semwork/vernead2/src/CImage/: CImage.cpp  CImage_ASCII.cpp  CImage_JPG.cpp  CImage_PNG.cpp
semwork/vernead2/src/CScaler/: CScaler.cpp  CScaler_BilinearInterpolation.cpp  CScaler_HQX.cpp
semwork/vernead2/src/Filter/: Filter.cpp  Filter.h  FilterKernel.cpp  FilterKernel.h  Filter_Edge.h  Filter_Grayscale.h  Filter_HighPass.cpp  Filter_HighPass.h  Filter_Inverse.cpp  Filter_Inverse.h  Filter_LowPass.cpp  Filter_LowPass.h  Filter_Sharpen.cpp  Filter_Sharpen.h
semwork/vernead2/src/Image/: FileWrap.cpp  FileWrap.h  Image.cpp  Image.h  Image_ASCII.cpp  Image_ASCII.h  Image_JPG.cpp  Image_JPG.h  Image_PNG.cpp  Image_PNG.h  LoadImage.cpp  LoadImage.h
semwork/vernead2/src/Image/Loaders/: LoadASCII.cpp  LoadASCII.h  LoadJPEG.cpp  LoadPNG.cpp  Loader.cpp  Loader.h
semwork/vernead2/src/Interface/: CMDInterface.cpp  CMDInterface.h  CreateSequence.cpp  CreateSequence.h  EditImage.cpp  Interactive.cpp  Interactive.h  InteractiveImageInterface.cpp  InteractiveImageInterface.h  InteractiveSequenceInterface.cpp  InteractiveSequenceInterface.h  Selector.cpp  Selector.h  cmd.cpp  cmd.h  main.cpp
semwork/vernead2/src/Interface/Factories/: FilterFactory.cpp  FilterFactory.h  PluginFactory.cpp  PluginFactory.h
semwork/vernead2/src/Plugins/: Plugin.cpp  Plugin.h  Plugin_Resize.cpp  Plugin_Resize.h  Plugin_Rotate.cpp  Plugin_Rotate.h  Plugin_Scaler.cpp  Plugin_Scaler.h
semwork/vernead2/src/Scaler/: Scaler.cpp  Scaler.h  Scaler_BilinearInterpolation.cpp  Scaler_BilinearInterpolation.h  Scaler_HQX.cpp  Scaler_HQX.h
semwork/vernead2/src/Sequence/: Sequence.cpp  Sequence.h
semwork/vernead2/src/include/: Filter.h  Image.h  Scaler.h  Sequence.h  ViewPort.h  cmd.h  dataTypes.h
semwork/vernead2/src/include/CFilter/: CFilter.h  CFilter_HighPass.h  CFilter_Inverse.h  CFilter_LowPass.h  CFilter_Rotate.h  CFilter_Sharpen.h
semwork/vernead2/src/include/CImage/: CImage.h  CImage_ASCII.h  CImage_JPG.h  CImage_PNG.h
semwork/vernead2/src/include/CScaler/: CScaler.h  CScaler_BilinearInterpolation.h  CScaler_HQX.h
semwork/vernead2/tests/: img.ascii  megaTest.cpp  testAll.cpp  testFilters.cpp  testImageGetter.cpp  testJPEGConverter.cpp  testPNGConverter.cpp  testPixels.cpp  testScaler.cpp  testUtils.cpp
task2/: CMakeLists.txt  Readme.md  main.cpp
task4/: CMakeLists.txt  main.cpp  test.cpp  victor.cpp
task5/: CMakeLists.txt  Readme.md  main.cpp
task6/: CMakeLists.txt  dev_main.cpp  main.cpp  progtest.cpp  test.cpp
